[gd_scene load_steps=5 format=2]

[ext_resource path="res://imgesFonts/parredes.png" type="Texture" id=1]
[ext_resource path="res://script/Plataforma_Queda.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 10 )

[node name="Plataforma_Queda" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -64, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -32, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Area" type="Area2D" parent="."]
monitorable = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2( -32, -32 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="desaparece"]
[connection signal="timeout" from="Timer2" to="." method="reaparece"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
